Completed the cta and faq section

--- a/starter/index.html
+++ b/starter/index.html
@@ -6,12 +6,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodplug</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="stylesheet" href="defaults.css">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+
+    <!-- header section starts here -->
+    <header>
+
+    </header>
+
+    <!-- header section ends here -->
+
+
+    <main>
+
+        <!-- Faq section starts here -->
+        <!-- Faq section ends here -->
+        <!-- Faq section starts here -->
+        <!-- Faq section ends here -->
+
+
+
+        <!-- Faq section starts here -->
+        <section class="faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faqs__container">
+
+                <div class="faqs__item">
+                    <h3><span><i class="fa-solid fa-leaf"></i></span> Foodera Bread really baked fresh each day?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eos odit incidunt reiciendis
+                        officia explicabo sint, magnam ex laboriosam vel sed eligendi architecto? At iusto nesciunt,
+                        quod est assumenda cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+
+
+                <div class="faqs__item">
+                    <h3><span><i class="fa-solid fa-leaf"></i></span> Foodera Bread really baked fresh each day?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eos odit incidunt reiciendis
+                        officia explicabo sint, magnam ex laboriosam vel sed eligendi architecto? At iusto nesciunt,
+                        quod est assumenda cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="faqs__item">
+                    <h3><span><i class="fa-solid fa-leaf"></i></span> Foodera Bread really baked fresh each day?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eos odit incidunt reiciendis
+                        officia explicabo sint, magnam ex laboriosam vel sed eligendi architecto? At iusto nesciunt,
+                        quod est assumenda cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="faqs__item">
+                    <h3><span><i class="fa-solid fa-leaf"></i></span> Foodera Bread really baked fresh each day?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eos odit incidunt reiciendis
+                        officia explicabo sint, magnam ex laboriosam vel sed eligendi architecto? At iusto nesciunt,
+                        quod est assumenda cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+
+
+            </div>
+
+            <div class="faq__parallax">
+                <h2>
+                    Baked fresh daily by bakers with passion</h2>
+                <button class="btn btn-main">Learn more</button>
+            </div>
+        </section>
+
+        <!-- Faq section ends here -->
+
+        <!-- cta section starts here -->
+        <section class="cta">
+            <h2>Hurry up! Subscribe to our newsletter<br />
+                and get 25% Off</h2>
+            <p>Limited time offer for this month. No credit card required.</p>
+
+            <div class="cta__input-holder">
+                <input type="text" placeholder="xxxxxx@email.com">
+                <button class="btn">Subscribe</button>
+            </div>
+
+
+        </section>
+        <!-- cta section ends here -->
+
+    </main>
 
     <!-- Footer section starts here-->
     <footer>
