Completed Explore food section

--- a/starter/index.html
+++ b/starter/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodplug</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="./fontawesome/css/all.css">
     <link rel="stylesheet" href="defaults.css">
@@ -27,10 +27,80 @@
 
     <main>
 
-        <!-- Faq section starts here -->
-        <!-- Faq section ends here -->
-        <!-- Faq section starts here -->
-        <!-- Faq section ends here -->
+        <!-- About us section starts here -->
+
+        <section class="about-us">
+            <div class="about-us__banner-holder">
+                <h2>When a man's stomach is full it makes no difference whether he is rich or poor.</h2>
+                <p>We bring you what you always wanted, and the best in authentic Italian food – with a menu that ranges
+                    from starters, lasagna, fresh pasta, pizzas, risotto, antipasti, pasta e fettuccini, and so much
+                    more. We don’t just serve food, but we do an amazing job at making it special. We don’t just provide
+                    unique food, we think about your dining experience.
+                </p>
+                <button class="btn-waves"><i class="fa-solid fa-play"></i></button>
+            </div>
+        </section>
+        <!-- About us section ends here -->
+
+
+        <!-- Explore foods section starts here -->
+        <section class="explore-foods">
+            <h2>Explore Our Foods</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse culpa, ipsam consequuntur adipisci tenetur
+                architecto dicta necessitatibus voluptatibus aperiam eum vel voluptate dolorum quas? Minima in quasi
+                possimus eius blanditiis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse culpa, ipsam
+                consequuntur adipisci tenetur architecto dicta necessitatibus voluptatibus aperiam eum vel voluptate
+                dolorum quas? Minima in quasi possimus eius blanditiis?</p>
+
+            <div class="foodcard-container">
+
+                <div class="foodcard__item">
+                    <div class="foodcard__image-holder">
+                        <img src="./img/explore1.jpg" alt="Rainbow Vegetable Sandwich">
+                    </div>
+                    <div class="foodcard__text-holder">
+                        <h4>Rainbow Vegetable Sandwich</h4>
+                        <p>Time: 15 - 20 Minutes | Serves: 1</p>
+                        <h3>$10.50 <span>$11.70</span></h3>
+                        <button class="btn btn-main">Order now</button>
+                    </div>
+                </div>
+
+
+
+                <div class="foodcard__item">
+                    <div class="foodcard__image-holder">
+                        <img src="./img/explore2.jpg" alt="Vegetarian Burger">
+                    </div>
+                    <div class="foodcard__text-holder">
+                        <h4>Vegetarian Burger</h4>
+                        <p>Time: 30 - 45 Minutes | Serves: 1</p>
+                        <h3>$9.20 <span>$10.50</span></h3>
+                        <button class="btn btn-main">Order now</button>
+                    </div>
+
+
+                </div>
+                <div class="foodcard__item">
+                    <div class="foodcard__image-holder">
+                        <img src="./img/explore3.jpg" alt="Raspberry Stuffed French Toast">
+                    </div>
+                    <div class="foodcard__text-holder">
+                        <h4>Raspberry Stuffed French Toast</h4>
+                        <p>Time: 10 - 15 Minutes | Serves: 1</p>
+                        <h3>$12.50 <span>$13.20</span></h3>
+                        <button class="btn btn-main">Order now</button>
+                    </div>
+
+
+                </div>
+
+
+
+            </div>
+        </section>
+
+        <!-- Explore foods section ends here -->
 
 
 
