completed about us and header section]

--- a/final/index.html
+++ b/final/index.html
@@ -19,6 +19,72 @@
 
     <!-- header section starts here -->
     <header>
+        <nav class="nav-desktop">
+            <div class="header-logo">
+                <i class="fa-regular fa-hand-lizard"></i>
+            </div>
+
+            <div class="link-holder">
+                <ul>
+                    <li><a href="#" class="header-links">Home</a></li>
+                    <li><a href="#aboutus" class="header-links">About Us</a></li>
+                    <li><a href="#explorefoods" class="header-links">Explore Foods</a></li>
+                    <li><a href="#faq" class="header-links">FAQ</a></li>
+                </ul>
+                <button class="btn btn-main">+1 (000) XXX-XXXX</button>
+            </div>
+        </nav>
+
+
+
+        <section class="header-banner">
+            <div class="header-banner__container">
+
+                <div class="header-banner-content">
+                    <h1>Good food choices<br />
+                        are good<br />
+                        investments.</h1>
+                    <p>We offer 6 delicious pizzas, from basic cheese and basil pizza (€6)
+                        to our signature Classic pizzeria ('Taverne'). A variety of our speciality pizzerias offer
+                        great
+                        value
+                        money such as 'Pizzeria de la Nazionale', where we’ve created a new delicious pizza in the
+                        heart
+                        of Milan,
+                        and the ‘Madrone’ pizzeria, which offers all-day dining, with an Italian twist to the menu.</p>
+                    <button class="btn btn-light">Learn more<i
+                            class="fa-solid fa-arrow-right-long banner-icon"></i></button>
+                    <button class="btn btn-main">Order now <i
+                            class="fa-solid fa-basket-shopping banner-icon"></i></button>
+                </div>
+
+
+
+            </div>
+        </section>
+
+
+
+
+
+        <section class="header__counter">
+            <div class="counter-item">
+                <h2>1287+</h2>
+                <p>SAVINGS</p>
+            </div>
+            <div class="counter-item">
+                <h2>6482+</h2>
+                <p>PHOTOS</p>
+            </div>
+            <div class="counter-item">
+                <h2>1004+</h2>
+                <p>ROCKETS</p>
+            </div>
+            <div class="counter-item">
+                <h2>1287+</h2>
+                <p>GLOBES</p>
+            </div>
+        </section>
 
     </header>
 
@@ -29,7 +95,52 @@
 
         <!-- About us section starts here -->
 
-        <section class="about-us">
+        <section class="about-us" id="aboutus">
+
+
+            <div class="about-us__card-container">
+                <div class="about-us__card-imageholder">
+                    <img src="./img/about1.png" alt="">
+                </div>
+                <div class="about-us__text-contentholder">
+                    <h2>We pride ourselves on<br />
+                        making real food from the<br />
+                        best ingredients.</h2>
+                    <p>9+ We also provide gluten free menu and desserts for those who are on the look out for
+                        something new. We are passionate about keeping the kitchen fresh and in tact, and are very
+                        hard working, always on time and making sure that the end-product is pleasing for everyone.
+                        Our menu is based on the best seasonal and imported ingredients.</p>
+                    <button class="btn btn-main">learn more<i
+                            class="fa-solid fa-arrow-right-long cardicon"></i></button>
+                </div>
+            </div>
+
+            <div class="about-us__card-container">
+                <div class="about-us__text-contentholder">
+                    <h2>We make everything by<br />
+                        hand with the best possible<br />
+                        ingredients.</h2>
+                    <p>We will show you what it's like to make it on the run with us, and we don't mind sharing a
+                        few too many laughs along the way!</p>
+
+                    <ul>
+                        <li> <i class="fa-solid fa-check check-icon"></i> Panzenella</li>
+                        <li> <i class="fa-solid fa-check check-icon"></i> Mushroom Risotto</li>
+                        <li> <i class="fa-solid fa-check check-icon"></i> Pasta Carbonara</li>
+                        <li> <i class="fa-solid fa-check check-icon"></i> Caprese Salad with Pesto Sauce</li>
+                    </ul>
+
+
+                    <button class="btn btn-main">learn more<i
+                            class="fa-solid fa-arrow-right-long cardicon"></i></button>
+                </div>
+                <div class="about-us__card-imageholder">
+                    <img src="./img/about2.png" alt="">
+                </div>
+            </div>
+
+
+
             <div class="about-us__banner-holder">
                 <h2>When a man's stomach is full it makes no difference whether he is rich or poor.</h2>
                 <p>We bring you what you always wanted, and the best in authentic Italian food – with a menu that ranges
@@ -44,7 +155,7 @@
 
 
         <!-- Explore foods section starts here -->
-        <section class="explore-foods">
+        <section class="explore-foods" id="explorefoods">
             <h2>Explore Our Foods</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse culpa, ipsam consequuntur adipisci tenetur
                 architecto dicta necessitatibus voluptatibus aperiam eum vel voluptate dolorum quas? Minima in quasi
@@ -105,7 +216,7 @@
 
 
         <!-- Faq section starts here -->
-        <section class="faq">
+        <section class="faq" id="faq">
             <h2>Frequently Asked Questions</h2>
             <div class="faqs__container">
 
